BUG: fixed food card not showing correctly when adding food from search results bug Feature: updated navbar on community page
* also added some margins on community page so buttons are closer
    (since buttons are set to fixed position, dragging the window size will cause issue, does it matter? THOUGHTS?)
* removed pixel-style fonts in most places, due to reability issue
* added border to navbar buttons, I personally like this way better but let me know if anyone disagree
* also added a prompt letting user know they've successfully added food (better FEEDBACK oh yeah)

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -182,7 +182,7 @@ li {
 }
 
 .water-intake-count {
-	font-family: 'Silkscreen', monospace;
+	/* font-family: 'Silkscreen', monospace; */
 	color: var(--colour-ring-orange);
 	font-size: 3rem;
 	font-weight: 700;
@@ -233,7 +233,7 @@ li {
 }
 
 .greet .username {
-	font-family: 'Silkscreen', monospace;
+	/* font-family: 'Silkscreen', monospace; */
 	color: var(--colour-ring-orange);
 }
 
@@ -259,7 +259,7 @@ li {
 	font-size: 1.3rem;
 	color: var(--colour-on-primary);
 	height: 27rem;
-	font-family: 'Silkscreen', monospace;
+	/* font-family: 'Silkscreen', monospace; */
 }
 
 .fc-header-toolbar {
